scss/layouts/board/_points.scss
.game {
  &__point {
    list-style: none;

    box-sizing: border-box;

    position: absolute;
    top: 0;
    left: 0;

    padding: 2px;

    opacity: 1;

    transition: transform $generalAnimationDuration ease,
                opacity $removeAnimationDuration ease;

    &--removed {
      visibility: hidden;

      transition: transform $generalAnimationDuration ease,
                  visibility $removeAnimationDuration ease $generalAnimationDuration/2;

      z-index: 3;
    }
    &-inner-container {
      position: relative;
      top: 50%;
      right: 0;

      width: 90%;
      height: 90%;

      margin: 0 auto;

      border-radius: em(10px);

      transform: translateY(-50%);

      z-index: 3;

      @include breakpoint-tablet {
        @include portraitOrientation() {
          border-radius: 15%;
        }
      }

      &:before {
        content: '';
        display: block;

        background-color: inherit;

        width: 100%;
        height: 100%;

        margin: 0 auto;

        opacity: 1;

        background-image: linear-gradient(-45deg, rgba(255, 255, 255, 0.04) 0%, rgba(0, 0, 0, 0.22) 100%);
        box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2),
        inset 0 0 0 3px rgba(255, 255, 255, 0.2);

        border-radius: em(10px);

        transform: scale(1);

        @include breakpoint-tablet {
          @include portraitOrientation() {
            border-radius: 15%;
          }
        }
      }
    }
    &--removed &-inner-container {
      opacity: 0;

      transition: opacity $removeAnimationDuration ease $generalAnimationDuration;

      &:before {
        opacity: 0;

        transform: scale(1.5);

        transition: transform $removeAnimationDuration ease $generalAnimationDuration, opacity $removeAnimationDuration ease $generalAnimationDuration;
      }
    }
    &-container {
      position: absolute;

      border: 3px solid rgba(255, 255, 255, 1);

      z-index: 2;

      border-radius: em(10px);

      &--removed {
        animation: removingPointsContainer $removeAnimationDuration ease $generalAnimationDuration both;

        @keyframes removingPointsContainer {
          0% {
            opacity: 0;

            transform: scale(0.9);
          }
          30% {
            opacity: 0.5;

            transform: scale(1.1);
          }
          100% {
            opacity: 0;

            transform: scale(1.4);
          }
        }
      }
    }
  }
  &--running &__point {
    animation: addingPointAnimation $generalAnimationDuration ease $generalAnimationDuration both;

    @keyframes addingPointAnimation {
      0% {
        opacity: 0;
      }
      30% {
        opacity: 0;
      }
      100% {
        opacity: 1;
      }
    }
  }
}

